  EntityPanel.updateSelectedEntities(property) and getInputProvider() moved to EntityTablePanel
  EntityEditModel.getValueProvider() added
  EntityUtil.getUpdateProperties() added
  EntityPanel.createStaticEntityPanel() removed
  EntityTabelPanel.createStaticEntityTablePanel() added
  EntityPanel.viewSelectionDependencies() moved to EntityTablePanel
  EntityPanel.exportSelected() moved to EntityTablePanel
  EntityTablePanel.hiddenColumns and associated stuff moved all the way down to AbstractFilteredTableModel/Panel
  ValueChangeMapEditPanel.defaultFocusComponent renamed to initialFocusComponent (along with related methods)
  PropertyValueProviderTest added
  common.db.DbUtil added, with createEmbeddedDatabase()
  EntityEditModel.getEntityNullState() renamed to stateEntityNull()
  EntityKeyCriteria bug fixed, it didn't use the original key values
  EntityTableModel constructor now takes a EntityEditModel as parameter
  EntityPanel, refactored all controls into EntityEditPanel and EntityTablePanel
  EntityEditModel constructor takes stActive as parameter
  EntityEditModel.isEntityNull() renamed to the more apt isEntityNew()
  EntityEditModel.isEntityNew() also checks the original key values
  EntityPanel.stActive and activeStateGroup moved to EntityEditModel
  ValueMap.saveValue() and saveAll() added, implemented in ValueChangeMapImpl and overridden in Entity
  ValueChangeMapModel.removeOriginalValue() now notifies a value change
  ValueChangeMapModel.mapTypeID field added
  AbstractFilteredTableModel.mapTypeID field added
  EntityModel.handleInsert/Update/Delete() added
  ValueChangeMapModel no longer implements Refreshable
  EntityTablePanel.getSelectColumnsControl() moved up to superclass
  EntityEditModel.evtRefreshStarted added
  EntityEditPanel uses the above to set the wait cursor during update
  ConnectionPoolSettings.set() added
  DbConnectionPool cleanupInterval is now editable